[package]
name = "kiffieboot"
version = "0.1.0"
edition = "2021"
description = "Runtime support for Kiffieboot"
repository = "https://github.com/kiffie/kiffieboot"
keywords = ["no-std", "mips", "pic32", "dfu", "bootloader"]
license = "MIT OR Apache-2.0"
include = ["README.md", "src"]

[features]
pic32mx2x0 = ["pic32mx2xx/pic32mx2xxfxxxb"]
pic32mx2x4 = ["pic32mx2xx/pic32mx2x4fxxxd"]
pic32mx470 = ["pic32mx470/pic32mx47xfxxxl"]
default = ["usbd-dfu-rt"]

[dependencies]
pic32mx2xx = { version = "0.7.0", optional = true }
pic32mx470 = { version = "0.1.0", optional = true }
mips-mcu = "0.3.0"
usbd-dfu-rt = { version = "0.4.0", optional = true }

[dev-dependencies]
pic32-hal = { version = "0.13.0", features = ["pic32mx2xxfxxxb", "usb-device"] }
usb-device = "0.3.2"
embedded-hal = "1.0.0"

[package.metadata.docs.rs]
features = ["pic32mx2x0"]
